--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,11 @@ layout: compress
     </div>
 
     {% include scripts.html %}
+<!-- <div class="wpb_raw_code wpb_raw_js" > -->
+    <!-- <div class="wpb_wrapper"> -->
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=m&d=JjZqaQOb0X-WoWcuF9JT-NRFmQNi048ShcfGoT17VVI&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+    <!-- </div> -->
+  <!-- </div> -->
 
   </body>
 </html>
