--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -75,6 +75,7 @@
   width: 36px;
   // set width only, for non-square avatars
   height: 46px;
+  border-radius: 20%;
 
   @include breakpoint($large) {
     display: block;
