--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -74,8 +74,8 @@
   vertical-align: top;
   width: 36px;
   // set width only, for non-square avatars
-  height: 46px;
-  border-radius: 20%;
+  // height: 46px;
+  //border-radius: 20%;
 
   @include breakpoint($large) {
     display: block;
@@ -85,7 +85,7 @@
 
   img {
     max-width: 175px;
-    border-radius: 20%;
+    border-radius: 10%;
 
     @include breakpoint($large) {
       padding: 5px;
