--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -32,6 +32,9 @@
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml?v=M44lzPylqQ">
 <meta name="theme-color" content="#ffffff"> -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
+{% if page.permalink == '/publications/' %}
+<link rel="stylesheet" href="{{ base_path }}/assets/css/publications.css"/>
+{% endif %}
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
